# tiger

./: .codecov.yml  CHANGELOG.md  Cargo.toml  MAINTENANCE.md  Maintenance.md  README.md  ROADMAP.md  Roadmap.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  vite.config.ts  xREADME.md
.github/workflows/: build.yml  ci.yml  coverage.yml  release.yml
docs/: _config.yml  exporting.md  index.md  internals.md  shortcuts.md
docs/examples/: json.template  xml.template
res/: logo.ai
src/: App.vue  index.css  main.rs  main.ts  streamer.rs  utils.rs
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/distribution/: generate-update-manifest.ps1  msi-wix-template.wxs  update-manifest-template.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  app.rs  document.rs  dto.rs  export.rs  features.rs  file_watcher.rs  live_updates.rs  main.rs  mock.rs  observable.rs  recent_files.rs  sheet.rs  state.rs  utils.rs
src-tauri/src/app/: mock.rs  tauri.rs
src-tauri/src/document/: clipboard.rs  command.rs  content.rs  export.rs  keyframe.rs  relocate.rs  selection.rs  timeline.rs  transient.rs  view.rs
src-tauri/src/export/: metadata.rs  mod.rs  texture.rs
src-tauri/src/features/: app_updates.rs  clipboard_analysis.rs  missing_textures.rs  onboarding.rs  recent_documents.rs  recent_files.rs  single_instance.rs  template_hot_reload.rs  templates_hot_reload.rs  texture_cache.rs  texture_hot_reload.rs  textures_hot_reload.rs
src-tauri/src/sheet/: compat.rs  mod.rs  test.rs  version1.rs  version2.rs  version3.rs  version4.rs  version5.rs  version_0_5_0.rs  version_1_0_0.rs
src-tauri/src/sheet/compat/: version1.rs  version2.rs  version3.rs
src-tauri/src/state/: app.rs  command.rs  document.rs  persistent.rs  selection.rs  view.rs
src-tauri/src/state/document/: clipboard.rs  command.rs  content.rs  details.rs  export.rs  keyframe.rs  persistent.rs  selection.rs  timeline.rs  transient.rs  view.rs
src-tauri/src/utils/: file_watcher.rs  handle.rs  observable.rs  paths.rs  texture_list.rs
src-tauri/test-data/: can_adjust_export_settings.export  can_adjust_export_settings.lua  export.template  flame.tiger  frostdrake.tiger  lua.template  malformed.template  only-frames.template  sample_sheet.tiger  sample_sheet_1.tiger  sample_sheet_2.tiger  samurai.export  samurai.json  samurai.tiger  samurai.xml  skywing.tiger  voiceofthewind.tiger  wingsofparadise.tiger
src-tauri/test-data/frostdrake/: frostdrake.tiger
src-tauri/test-data/skywing/: skywing.tiger
src-tauri/test-data/voiceofthewind/: voiceofthewind.tiger
src-tauri/test-data/wingsofparadise/: wingsofparadise.tiger
src/api/: app.ts  document.ts  dto.ts  local.ts
src/backend/: api.ts  dto.ts
src/commands/: app.ts  local.ts
src/components/: Animation.vue  AppBar.vue  ContentPane.vue  Frame.vue  HelloWorld.vue  Icon.vue  InputRename.vue  MainLayer.vue  ModalLayer.vue  NotificationLayer.vue  NotificationOverlay.vue  Selectable.vue  StartupScreen.vue  TimelinePane.vue  UnsavedChangesDialog.vue  UpdateBanner.vue  Workbench.vue  WorkbenchPane.vue
src/components/animations/: Animation.vue  Animations.vue  AnimationsPane.vue
src/components/basic/: Bubble.vue  Button.vue  Checkbox.vue  ContextMenu.vue  ContextMenuLayer.vue  DragArea.vue  FlatMultiSwitch.vue  FlatToggle.vue  FloatingLayer.vue  FloatingWidget.vue  FocusTrap.vue  Icon.vue  InputError.vue  InputField.vue  InputFile.vue  InputLabel.vue  InputPath.vue  InputRename.vue  InputSearch.vue  InputText.vue  Menu.vue  MenuBackground.vue  MenuBar.vue  MenuBarItem.vue  MenuItem.vue  MenuLayer.vue  MenuSeparator.vue  MenuTree.vue  ModalDialog.vue  ModalOverlay.vue  MultiSwitch.vue  Notification.vue  Notifications.vue  Pane.vue  PaneInset.vue  PaneTab.vue  PaneTabList.vue  (+11 more)
src/export/: mod.rs  pack.rs
src/scaffold/: mod.rs
src/sheet/: compat.rs  mod.rs
src/state/: app.rs  command.rs  document.rs  error.rs  selection.rs  transient.rs  view.rs
src/stores/: app.ts  dev.ts  document.ts  focus.ts  sprite.ts  state.ts
src/ui/: content_window.rs  hitboxes_window.rs  keyframe_window.rs  mod.rs  selection_window.rs  spinner.rs  timeline_window.rs  workbench_window.rs
src/utils/: animation.ts  keyboard.ts
tiger-imgui/: Cargo.toml  streamer.rs
tiger-imgui/export/: mod.rs
tiger-imgui/scaffold/: mod.rs
tiger-imgui/state/: app.rs  command.rs  document.rs
tiger-imgui/ui/: keyframe_window.rs  mod.rs  timeline_window.rs
(+55 files in other folders)
