[package]
name = "tiger"
version = "0.3.0-wip"
authors = ["Antoine Gersant <antoine.gersant@lesforges.org>"]
edition = "2021"

[dependencies]
euclid = "0.22"
failure = "0.1.3"
glium = "0.30.2"
image = "0.24"
imgui = "0.8.2"
imgui-glium-renderer = "0.8.2"
imgui-winit-support = "0.8.2"
liquid = "0.26"
nfd = "0.0.4"
notify = "4.0.15"
pathdiff = "0.2.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
texture_packer = "0.24"