[package]
name = "tiger"
version = "0.4.0-wip"
authors = ["Antoine Gersant <antoine.gersant@lesforges.org>"]
license = "MIT"
default-run = "tiger"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-rc.8", features = [] }

[dependencies]
anyhow = "1.0"
euclid = "0.22"
image = "0.24"
liquid = "0.26"
pathdiff = "0.2.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-rc.9", features = ["api-all"] }
texture_packer = "0.24"
thiserror = "1.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
