[package]
name = "tiger"
version = "0.0.0-development"
authors = ["Antoine Gersant <antoine.gersant@lesforges.org>"]
license = "MIT"
default-run = "tiger"
edition = "2021"
rust-version = "1.63"

[build-dependencies]
tauri-build = { version = "1.1", features = [] }

[dependencies]
derivative = "2.2.0"
enum-iterator = "1.1.2"
euclid = "0.22"
futures = "0.3"
image = "0.24"
json-patch = "0.2.6"
liquid = "0.26"
notify = "4.0"
regex = "1.5.6"
pathdiff = "0.2.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.1", features = ["clipboard", "clipboard-read-text", "clipboard-write-text", "dialog-open", "dialog-save", "protocol-asset", "window-close", "window-maximize", "window-minimize", "window-start-dragging", "window-unmaximize"] }
texture_packer = "0.24"
thiserror = "1.0"

[dependencies.uuid]
version = "1.1.1"
features = ["v4", "fast-rng", "serde"]

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
