[package]
name = "tiger"
version = "0.0.0-development"
authors = ["Antoine Gersant <antoine.gersant@lesforges.org>"]
license = "MIT"
default-run = "tiger"
edition = "2021"
rust-version = "1.63"

[profile.dev.package."*"]
opt-level = 3

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[profile.release]
debug = true

[dependencies]
async-trait = "0.1.61"
crunch = "0.3.3"
derivative = "2.2.0"
directories = "4.0.1"
enum-iterator = "1.1.2"
euclid = "0.22"
futures = "0.3"
handlebars = "4.3.5"
handlebars_misc_helpers = { version = "0.12.1", features = ["string"] }
image = "0.24"
json-patch = "0.2.6"
log = "0.4.17"
notify-debouncer-mini = "0.2"
once_cell = "1.16.0"
parking_lot = "0.12.1"
regex = "1.5.6"
pathdiff = "0.2.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
simplelog = "0.12.0"
squeak = "0.1.0"
sugar_path = "0.0.9"
tauri = { version = "1.2", features = ["clipboard", "clipboard-read-text", "clipboard-write-text", "dialog-open", "dialog-save", "protocol-asset", "shell-open", "window-close", "window-maximize", "window-minimize", "window-start-dragging", "window-unmaximize"] }
thiserror = "1.0"
tokio = { version = "1.24.1", features = ["macros"] }
window-shadows = "0.2.0"

[dependencies.uuid]
version = "1.1.1"
features = ["v4", "fast-rng", "serde"]

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
